2002-08-28  Jody Goldberg <jody@gnome.org>

	* src/print.c (print_range_down_then_right) : fix fence post error.
	  repeated cols/rows are part of the region if they start _on_ the
	  coordinate, not just before.

2002-08-28  Jody Goldberg <jody@gnome.org>

	* src/xml-io.c (xml_check_version) : fix failure test.
	(xml_probe) : ensure we are at the start of the stream.

2002-08-28  Jody Goldberg <jody@gnome.org>

	* src/func.c (function_marshal_arg) : begin work to support implicit
	  iteration.

2002-08-28  Jody Goldberg <jody@gnome.org>

	* src/gnumeric-canvas.c : begin tighening the include requirements.
	* src/gui-file.c : ditto.
	* src/sheet-object-graphic.c : ditto.
	* src/sheet-object-widget.c : ditto.
	* src/xml-io.c : ditto.

	* src/gutils.c (gnm_extension_pointer) : move to libgsf.
	(gnm_iconv_close) : ditto.

2002-08-28  Jody Goldberg <jody@gnome.org>

	* configure.in : prep for inclusion of libegg code
	  bump libgsf version req.
	* src/Makefile.am : ditto.

	* README : update.

2002-08-25  Jody Goldberg <jody@gnome.org>

	* Release 1.1.8

2002-08-25  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c : tweak page setup label to match bonobo.

	* src/sheet-object-image.c (sheet_object_image_print) : slight tweak
	  to get thing spartially working.  placement is still off.

	* configure.in : bump the gal req to get the new cursor.

2002-08-23  Jon K Hellan  <hellan@acm.org>

	* src/bonobo-io.c: Include gsf-input-bonobo.h from gsf-gnome dir
	rather than gsf.

2002-08-21  Zbigniew Chyla  <cyba@gnome.pl>

	* module-plugin-defs.h:
	Define PLUGIN_CLASS only if PLUGIN_ID is defined

2002-08-20  Jody Goldberg <jody@gnome.org>

	* configure.in : add config message about python

2002-08-20  Zbigniew Chyla  <cyba@gnome.pl>

	* src/plugin-loader.[ch]: Inherit from GObject, not GtkObject.
	(gnumeric_plugin_loader_unload_service): Removed FIXME - unload plugin
	after unloading all services.

	* src/plugin-loader-module.h: Moved all typedefs with plugin