@@ -40,7 +40,7 @@ You need:
 	libgsf		>= 1.4.0
 	libglade	>= 2.0.0
 	intltools	>= 0.9
-	gal-2		>= 0.0.5	(gal-2 branch of module gal)
+	gal-2		>= 0.0.6	(gal-2 branch of module gal)
 	gnome-xml   	>= 2.4.12
 	NOTE : gnome-xml is also known as libxml
 
