@@ -46,7 +46,7 @@ gtk+-2.0	>= 2.0.0
 libxml-2.0	>= 2.4.12
 libglade-2.0	>= 1.99.7
 libgnomecanvas-2.0 >= 1.113.0
-gal-2.0		>= 0.0.5
+gal-2.0		>= 0.0.6
 libgnome-2.0	>= 1.105.0
 libgnomeui-2.0	>= 1.106.0
 libgnomeprint-2.0 >= 1.114.0
