@@ -1,3 +1,8 @@
+2002-08-29  Jody Goldberg <jody@gnome.org>
+
+	* auto-correct.c (autocorrect_tool) : don't run off the end of strings
+	  looking for spaces.
+
 2002-08-25  Jody Goldberg <jody@gnome.org>
 
 	* Release 1.1.8
